--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - name: Deploy app through Fly
+      - name: Deploy Fly App
+        if: ${{ github.event_name == 'push' }}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
