--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,10 @@ jobs:
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Show commit message
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message )}}
+        run: echo "$COMMIT_MESSAGES"
   version_bump:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
