--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,8 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Show commit message
         env:
-          COMMIT_MESSAGES: ${{ join(toJson(github.event.commits.*.message ), ', ')}}
+          COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
+        if: ${{contains(toJson(github.event.commits.*.message)[0], '#skip' )}}
         run: echo "$COMMIT_MESSAGES"
   version_bump:
     needs: [simple_deployment_pipeline]
