--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,9 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
         run: echo "$COMMIT_MESSAGES[0]"
+      - name: test message for skip
+        env:
+          COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
         if: ${{contains('$COMMIT_MESSAGES[0]', '#skip' )}}
         run: echo "$COMMIT_MESSAGES"
   version_bump:
