--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,26 +19,26 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Install dependencies
         run: npm install
-      - name: Check style
-        run: npm run eslint
-      - name: build
-        run: npm run build
-      - name: test
-        run: npm run test
-      - name: Deploy Fly App
-        if: ${{ github.event_name == 'push' }}
-        run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      - name: Show commit message
+      # - name: Check style
+      #   run: npm run eslint
+      # - name: build
+      #   run: npm run build
+      # - name: test
+      #   run: npm run test
+      # - name: Deploy Fly App
+      #   if: ${{ github.event_name == 'push' }}
+      #   run: flyctl deploy --remote-only
+      #   env:
+      #     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      # - name: Show commit message
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
-        run: echo "$COMMIT_MESSAGES[0]"
+        run: echo ${{ join('$COMMIT_MESSAGES')}}
       - name: test message for skip
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
         if: ${{contains('$COMMIT_MESSAGES[0]', '#skip' )}}
-        run: echo "$COMMIT_MESSAGES"
+        run: echo "$join(COMMIT_MESSAGES)"
   version_bump:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
