--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,9 +31,7 @@ jobs:
       #   env:
       #     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Show commit message
-        env:
-          COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
-        run: echo join("$COMMIT_MESSAGES")
+        run: echo ${{ github.events.commits.*.message[0] }}
       - name: test message for skip
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
