--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       #   env:
       #     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Show commit message
-        run: echo ${{ github.events.commits.*.message[0] }}
+        run: echo ${{ toJson(github.events.commits.*.message[0]) }}
       - name: test message for skip
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
