--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       #   env:
       #     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Show commit message
-        run: echo "${{toJson(github.event.*.head_commit.message)}}"
+        run: echo "${{toJson(github.event.head_commit.message)}}"
       - name: test message for skip
         env:
           COMMIT_MESSAGES: ${{toJson(github.event.commits.*.message )}}
