--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,17 +19,17 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Install dependencies
         run: npm install
-      # - name: Check style
-      #   run: npm run eslint
-      # - name: build
-      #   run: npm run build
-      # - name: test
-      #   run: npm run test
-      # - name: Deploy Fly App
-      #   if: ${{ github.event_name == 'push' }}
-      #   run: flyctl deploy --remote-only
-      #   env:
-      #     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Check style
+        run: npm run eslint
+      - name: build
+        run: npm run build
+      - name: test
+        run: npm run test
+      - name: Deploy Fly App
+        if: ${{ github.event_name == 'push' }}
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Show commit message
         run: echo "${{toJson(github.event.head_commit.message)}}"
       - name: test message for skip
