--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - name: test
         run: npm run test
       - name: Deploy Fly App
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' }} && !contains(github.event.head_commit.message, '#skip')
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
         with:
           node-version: "16"
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' }} && !contains(github.event.head_commit.message, '#skip')
         uses: anothrNick/github-tag-action@1.65.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
