--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - name: test
         run: npm run test
       - name: Deploy Fly App
-        if: ${{ github.event_name == 'push' }} && !contains(github.event.head_commit.message, '#skip')
+        if: ${{ github.event_name == 'push'  && !contains(github.event.head_commit.message, '#skip')}}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
