--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,11 +30,6 @@ jobs:
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      - name: Show commit message
-        run: echo "${{toJson(github.event.head_commit.message)}}"
-      - name: test message for skip
-        if: contains(github.event.head_commit.message, '#skip')
-        run: echo "$join(COMMIT_MESSAGES)"
   version_bump:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
@@ -44,7 +39,7 @@ jobs:
         with:
           node-version: "16"
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }} && !contains(github.event.head_commit.message, '#skip')
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         uses: anothrNick/github-tag-action@1.65.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
